--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.1.5)
 
 project(PersonProject)
 
-set(CppFile src/fileutility.cpp)
+add_subdirectory(hdk)
 
-add_executable(PersonProject ${CppFile})
+# set(CppFile src/fileutility.cpp)
+
+# add_executable(PersonProject ${CppFile})
