Add opengl files.

--- a/opengl/CMakeLists.txt
+++ b/opengl/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.6)
-add_subdirectory(glfw)
-add_subdirectory(glew)
+set(CMAKE_TOOLCHAIN_FILE "D:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake")
+set(VCPKG_DEFAULT_TRIPLET x64-windows)
+
+
+find_package(glfw3 CONFIG REQUIRED)
+
 project(Main)
 
-add_executable(Main main.cpp)
+add_executable(Main main.cpp glad/src/glad.c)
+target_include_directories(Main PRIVATE glad/include)
 
-target_link_libraries(Main glfw)
+target_link_libraries(Main PRIVATE glfw)
