--- a/opengl/CMakeLists.txt
+++ b/opengl/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.6)
-set(CMAKE_TOOLCHAIN_FILE "D:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake")
+set(CMAKE_TOOLCHAIN_FILE "E:/dev/vcpkg/scripts/buildsystems/vcpkg.cmake")
 set(VCPKG_DEFAULT_TRIPLET x64-windows)
 
 project(Main)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 11)
 
 find_package(glfw3 CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
@@ -16,7 +18,7 @@ add_executable(Main Example.cpp
                     
                     ${GLADPATH}/src/glad.c)
 
-#target_precompile_headers(Main PRIVATE <string>)
+target_precompile_headers(Main PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/Pch.h>")
 
 target_include_directories(Main PRIVATE library)
 target_include_directories(Main PRIVATE ${GLADPATH}/include)
